--- a/Frontend/src/app/roulete/roulete.component.html
+++ b/Frontend/src/app/roulete/roulete.component.html
@@ -1,26 +1,44 @@
 <h1>Roulette</h1>
 
-<div style="position: relative; display: inline-block;">
+<div style="position: relative; display: inline-block; align-items: center;">
   <a href="#" (click)="spinRoulette($event)">
-    <img #rouletteImage (click)="onClick($event)" class="roulette-img" width="400" height="400" src="assets/Imgaes/imageedit_4_4588350095copy.png">
+    <img #rouletteImage (click)="onClickWheel($event)" class="roulette-img" width="400" height="400" src="assets/Imgaes/imageedit_4_4588350095copy.png">
   </a>
   <div class="arrow"></div>
 </div>
 
 <div *ngIf="displayDiv">Click on the wheel to reset it and play again</div>
-<div *ngIf="!isSpinning">Last winning number: {{wheelNumbers[this.winningNumber]}}</div>
+<div *ngIf="!isSpinning">Last winning number: {{wheelNumbers[this.winningNumber].value}} ({{wheelNumberColor(this.winningNumber) }})</div>
+<div *ngIf="!isSpinning">Your bet {{playerBet}} credits</div>
 
-<p>Hold down the mouse button to spin.</p>
+<div class="red-black-buttons grid-container">
+  <button class="red-button grid-item"
+          (mouseover)="displayDiv ? null : onHover($event)"
+          (mouseleave)="displayDiv ? null : onLeave($event)"
+          (click)="displayDiv ? null : onClickRed($event)"
+          (click)="displayDiv ? null : onClickColour($event, 'red')"
+          [ngClass]="{ unclickable: displayDiv}">Red</button>
 
-<div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-top: 20px;">
-  <div *ngFor="let number of numsForDisplay; let i = index"
-       (mouseover)="onHover($event)"
-       (mouseleave)="onLeave($event)"
-       (click)="onClickButton($event, i)"
-       [ngStyle]="{ 'background-color': getBackgroundColor(number, i) }"
-       style="border: 1px solid #ddd; padding: 10px; text-align: center; color: white;">
-    {{ number }}
-  </div>
+  <button class="black-button grid-item"
+          (mouseover)="displayDiv ? null : onHover($event)"
+          (mouseleave)="displayDiv ? null : onLeave($event)"
+          (click)="displayDiv ? null : onClickBlack($event)"
+          (click)="displayDiv ? null : onClickColour($event, 'black')"
+          [ngClass]="{ unclickable: displayDiv}"
+          >Black</button>
 </div>
 
 
+<div class="grid-container">
+  <div
+    *ngFor="let number of numsForDisplay; let i = index"
+    (mouseover)="onHover($event)"
+    (mouseleave)="onLeave($event)"
+    (click)="displayDiv ? null : onClickNumber($event, i)"
+    [ngStyle]="{ 'background-color': getBackgroundColor(number, i) }"
+    [ngClass]="{ unclickable: displayDiv, firstRowAlone: i === 0 }"
+    class="grid-item"
+  >
+    {{ number }}
+  </div>
+</div>
