--- a/Frontend/src/app/menu/menu.component.html
+++ b/Frontend/src/app/menu/menu.component.html
@@ -1,5 +1,6 @@
 <div class="menu">
   <button routerLink="" class="menu-button">Home</button>
   <button routerLink="/Roulete" class="menu-button">Roulette</button>
+  <button routerLink="/Player" class="menu-button">Profile</button>
 </div>
 <div class="balance">Balance = {{ player.credits }}</div>
