Added Player Profile and multiple bet value options

--- a/Frontend/src/app/menu/menu.component.html
+++ b/Frontend/src/app/menu/menu.component.html
@@ -3,4 +3,4 @@
   <button routerLink="/Roulete" class="menu-button">Roulette</button>
   <button routerLink="/Player" class="menu-button">Profile</button>
 </div>
-<div class="balance">Balance = {{ player.credits }}</div>
+<div class="balance">Balance = {{ player.credits }} credits</div>
