--- a/Frontend/src/app/player/player.component.html
+++ b/Frontend/src/app/player/player.component.html
@@ -1,1 +1,9 @@
-<p>player works!</p>
+<div class="player-profile">
+    <h2>Player Profile</h2>
+    <div class="profile-details">
+      <p><strong>Player Name:</strong> {{ player.username }}</p>
+      <p><strong>Email:</strong> {{ player.email }}</p>
+      <p><strong>Credits:</strong> {{ player.credits }}</p>
+    </div>
+  </div>
+  
