--- a/Frontend/src/app/black-jack/black-jack.component.css
+++ b/Frontend/src/app/black-jack/black-jack.component.css
@@ -26,3 +26,40 @@ div{
   outline: 0;
   outline: none;
   }
+
+
+
+.play-area{
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+}
+
+.dealer-section, .player-section {
+  margin-bottom: 20px;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+
+.card {
+  margin-right: 10px;
+  margin-bottom: 10px;
+  display: inline-block !important;
+  max-width: 12% !important;
+}
+
+
+
+.btn {
+  margin: 10px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
