--- a/Frontend/src/app/black-jack/black-jack.component.html
+++ b/Frontend/src/app/black-jack/black-jack.component.html
@@ -1,67 +1,60 @@
-<div>
-  Dealer Cards:
-  <div style="display: flex; flex-wrap: wrap;">
-    <div *ngFor="let card of cardListDealer; let i = index" style="margin-right: 10px; margin-bottom: 10px;">
-      <img *ngIf="i === 0 && !playerHold" [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-      {{i}}
->>>>>>> 2581eb0876108d935f517a9187513cb844e98822
->>>>>>> 727a3a0e2355a188bc80331c1b963f84afc811b6
-      <img *ngIf="playerHold" [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
+<div class="play-area">
+  <div class="dealer-section">
+    <div>Dealer Cards:</div>
+    <div class="card-container">
+      <div class="card" *ngFor="let card of cardListDealer; let i = index" style="margin-right: 10px; margin-bottom: 10px;">
+        <img *ngIf="i === 0 && !playerHold" [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
+        <img class="img-fluid" *ngIf="playerHold" [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
+      </div>
+    </div>
+  </div>
+
+  <div class="player-section">
+    <div *ngIf="playerHold">
+      <strong>Dealer Score:</strong> {{ dealerHandValue }}
+    </div>
+    <div>
+      <strong>Your Score:</strong> {{ playerHandValue }}
+    </div>
+    <div *ngIf="playerHold || playerIsBust">
+      <strong>Message:</strong> {{ message }}
+    </div>
+
+    Player Cards:
+    <div class="card-container">
+      <div *ngFor="let card of cardListPlayer" class="card">
+        <img class="img-fluid" [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
+      </div>
     </div>
   </div>
 </div>
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-
-
-
->>>>>>> 2581eb0876108d935f517a9187513cb844e98822
->>>>>>> 727a3a0e2355a188bc80331c1b963f84afc811b6
-<div>
-  Player Cards:
-  <div style="display: flex; flex-wrap: wrap;">
-    <div *ngFor="let card of cardListPlayer" style="margin-right: 10px; margin-bottom: 10px;">
-      <img [src]="'assets/Images/DeckCards/' + card.symbol + '_' + card.value + '.png'" alt="{{ card.value }}">
-    </div>
-  </div>
-  <button *ngIf="!playerIsBust && !playerHold" style="margin-bottom: 10px;" class="btn btn-primary" (click)="playerLogic(cardListPlayer,cardListDealer)">Draw Card</button>
-  {{playerHandValue}}
-</div>
+<button *ngIf="!playerIsBust && !playerHold" class="btn" (click)="playerLogic(cardListPlayer, cardListDealer)">Draw Card</button>
+<button *ngIf="!playerIsBust && gameInProgress" class="btn" (click)="holdBet()"> Hold</button>
+<button *ngIf="playerIsBust || playerHold" class="btn" (click)="clearAllCards()">Try Again</button>
 
 <div *ngIf="playerIsBust">Bust</div>
 
 <div class="chip-image-row">
-  <div class="chip-image-button" (click)="setPlayerBet(5)"  [ngStyle]="{'transform': getChipSize(5)}">
-    <img src="assets/Images/Chips/5 credits chip.png" alt="5"/>
-  </div>
-  <div class="chip-image-button" (click)="setPlayerBet(10)"  [ngStyle]="{'transform': getChipSize(10)}">
-    <img src="assets/Images/Chips/10 credits chip.png" alt="10"/>
-  </div>
-  <div class="chip-image-button" (click)="setPlayerBet(20)"  [ngStyle]="{'transform': getChipSize(20)}">
-    <img src="assets/Images/Chips/20 credits chip.png" alt="20"/>
-  </div>
-  <div class="chip-image-button" (click)="setPlayerBet(50)"  [ngStyle]="{'transform': getChipSize(50)}">
-    <img src="assets/Images/Chips/50 credits chip.png" alt="50"/>
-  </div>
-  <div class="chip-image-button" (click)="setPlayerBet(100)"  [ngStyle]="{'transform': getChipSize(100)}">
-    <img src="assets/Images/Chips/100 credits chip.png" alt="100"/>
-  </div>
+<div *ngIf="gameInProgress == false || playerBet == 5" class="chip-image-button" (click)="setPlayerBet(5)"  [ngStyle]="{'transform': getChipSize(5)}">
+  <img src="assets/Images/Chips/5 credits chip.png" alt="5"/>
 </div>
-<div>{{message}}</div>
-<<<<<<< HEAD
-<button *ngIf="playerIsBust || playerHold" (click)="clearAllCards()">Try Again</button>
-=======
-<<<<<<< HEAD
-<button *ngIf="playerIsBust || playerHold" (click)="clearAllCards()">Try Again</button>
-=======
-<button *ngIf="playerIsBust && playerHold" (click)="clearAllCards()">Try Again</button>
->>>>>>> 2581eb0876108d935f517a9187513cb844e98822
->>>>>>> 727a3a0e2355a188bc80331c1b963f84afc811b6
-<button *ngIf="!playerIsBust" (click)="holdBet()"> Hold</button>
+<div *ngIf="gameInProgress == false || playerBet == 10" class="chip-image-button" (click)="setPlayerBet(10)"  [ngStyle]="{'transform': getChipSize(10)}">
+  <img src="assets/Images/Chips/10 credits chip.png" alt="10"/>
+</div>
+<div *ngIf="gameInProgress == false || playerBet == 20" class="chip-image-button" (click)="setPlayerBet(20)"  [ngStyle]="{'transform': getChipSize(20)}">
+  <img src="assets/Images/Chips/20 credits chip.png" alt="20"/>
+</div>
+<div *ngIf="gameInProgress == false || playerBet == 50" class="chip-image-button" (click)="setPlayerBet(50)"  [ngStyle]="{'transform': getChipSize(50)}">
+  <img src="assets/Images/Chips/50 credits chip.png" alt="50"/>
+</div>
+<div *ngIf="gameInProgress == false || playerBet == 100" class="chip-image-button" (click)="setPlayerBet(100)"  [ngStyle]="{'transform': getChipSize(100)}">
+  <img src="assets/Images/Chips/100 credits chip.png" alt="100"/>
+</div>
+</div>
+
+
+
+
+
+
