--- a/Frontend/src/app/menu/menu.component.html
+++ b/Frontend/src/app/menu/menu.component.html
@@ -1,7 +1,5 @@
 <div class="menu">
-  <button routerLink="" class="menu-button">Home</button>
-  <button routerLink="/Roulete" class="menu-button">Roulette</button>
-  <button routerLink="/BlackJack" class="menu-button">Black Jack</button>
+  <button routerLink="" class="menu-button">Main Menu</button>
   <button routerLink="/Player" class="menu-button">Profile</button>
 </div>
 <div class="balance">Balance: {{ player.credits }} credits</div>
