--- a/Frontend/src/app/menu/menu.component.html
+++ b/Frontend/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <div class="menu">
   <button routerLink="" class="menu-button">Main Menu</button>
   <button routerLink="/Player" class="menu-button">Profile</button>
+  <div class="menu-balance">Balance: {{ player.credits }} credits</div>
 </div>
-<div class="balance">Balance: {{ player.credits }} credits</div>
+
 
