Spelling Error Fix

--- a/Frontend/src/app/home-page/home-page.component.html
+++ b/Frontend/src/app/home-page/home-page.component.html
@@ -1,2 +1,3 @@
 <button routerLink="/Roulete" class="menu-button">Roulette</button>
-<button routerLink="/BlackJack" class="menu-button">Black Jack</button>
+<button routerLink="/BlackJack" class="menu-button">Blackjack</button>
+
