Implemented Firebase AUTH

--- a/Frontend/src/app/home-page/home-page.component.html
+++ b/Frontend/src/app/home-page/home-page.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <button routerLink="/Roulete" class="menu-button">Roulette</button>
 <button routerLink="/BlackJack" class="menu-button">Blackjack</button>
 
