--- a/Frontend/src/app/player/player.component.html
+++ b/Frontend/src/app/player/player.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="player-profile">
     <h2>Player Profile</h2>
     <div class="profile-details">
@@ -6,4 +7,3 @@
       <p><strong>Credits:</strong> {{ player.credits }}</p>
     </div>
   </div>
-  
