--- a/Frontend/src/app/roulete/roulete.component.html
+++ b/Frontend/src/app/roulete/roulete.component.html
@@ -1,5 +1,5 @@
+<app-menu></app-menu>
 <h1>Roulette</h1>
-
 <div style="position: relative; display: inline-block; align-items: center;">
   <a href="#" (click)="spinRoulette($event)">
     <img #rouletteImage (click)="onClickWheel($event)" class="roulette-img" width="400" height="400" src="assets/Images/imageedit_4_4588350095copy.png">
