--- a/Frontend/src/app/black-jack/black-jack.component.css
+++ b/Frontend/src/app/black-jack/black-jack.component.css
@@ -1,63 +1,60 @@
 .chip-image-row {
-  justify-content: space-between;
-  margin: 20px;
-  border-style: none;
+  justify-content: space-between !important;
+  margin: 20px !important;
+  border-style: none !important;
 }
 
 .chip-image-button {
-  cursor: pointer;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  border-style: hidden;
-  display: inline-block;
+  cursor: pointer !important;
+  padding: 10px !important;
+  border: 1px solid #ddd !important;
+  border-radius: 5px !important;
+  border-style: hidden !important;
+  display: inline-block !important;
 }
 
 .chip-image-button img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
+  width: 100px !important;
+  height: 100px !important;
+  object-fit: cover !important;
 }
 
-div{
-  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
+div {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
 }
 
 *:focus {
-  outline: 0;
-  outline: none;
-  }
+  outline: 0 !important;
+  outline: none !important;
+}
 
-.play-area{
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
+.play-area {
+  display: flex !important;
+  flex-direction: column !important;
+  width: fit-content !important;
 }
 
 .dealer-section, .player-section {
-  margin-bottom: 5px;
+  margin-bottom: 5px !important;
 }
 
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 5px;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  margin-bottom: 5px !important;
 }
 
 .card {
-  margin-right: 10px;
+  margin-right: 10px !important;
   display: inline-block !important;
   max-width: 12% !important;
 }
 
-
-
 .btn {
-  margin-right: 20px;
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+  margin-right: 20px !important;
+  background-color: #3498db !important;
+  color: #fff !important;
+  border: none !important;
+  padding: 10px !important;
+  cursor: pointer !important;
 }
-
