--- a/Frontend/src/app/register-page/register-page.component.html
+++ b/Frontend/src/app/register-page/register-page.component.html
@@ -5,6 +5,10 @@
           <form>
             <div class="mb-3"></div>
             <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Username</label>
+              <input type="email" class="form-control" name="email" [(ngModel)]="username">
+            </div>
+            <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" class="form-control" name="email" [(ngModel)]="email">
             </div>
