--- a/Frontend/src/app/home-page/home-page.component.html
+++ b/Frontend/src/app/home-page/home-page.component.html
@@ -1,4 +1,8 @@
+<img class =" img-logo" src="assets/Images/Logo.png" alt="FESBet">
 <app-menu></app-menu>
-<button routerLink="/Roulete" class="menu-button">Roulette</button>
-<button routerLink="/BlackJack" class="menu-button">Blackjack</button>
+<div class="main-menu-page">
+  <button routerLink="/Roulete" class="menu-button">Roulette</button>
+  <button routerLink="/BlackJack" class="menu-button">Blackjack</button>
+</div>
+
 
