--- a/Frontend/src/app/home-page/home-page.component.css
+++ b/Frontend/src/app/home-page/home-page.component.css
@@ -18,3 +18,17 @@
   color: black;
   border: 2px solid #4CAF50;
 }
+
+.img-logo {
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  height: auto;
+  max-height: 100px;
+  max-width: 400px;
+  margin-bottom: 5px;
+}
+
+.main-menu-page {
+  display: grid;
+  grid-template-columns: 1fr;
+}
