--- a/Frontend/src/app/login-page/login-page.component.html
+++ b/Frontend/src/app/login-page/login-page.component.html
@@ -2,6 +2,7 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
+          <img class =" img-logo" src="assets/Images/Logo.png" alt="FESBet">
           <form>
             <div class="mb-3"></div>
             <div class="mb-3">
