--- a/Frontend/src/app/player/player.component.css
+++ b/Frontend/src/app/player/player.component.css
@@ -6,18 +6,35 @@
     margin: 20px;
     width: 300px;
   }
-  
+
   .player-profile h2 {
     color: #333;
     font-size: 24px;
     margin-bottom: 10px;
   }
-  
+
   .profile-details {
     margin-top: 15px;
   }
-  
+
   .profile-details p {
     margin: 5px 0;
   }
-  
+
+  .logout-button {
+    background-color: #0859a5;
+    color: #ddd;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 12px;
+    width: 100%;
+    height: auto;
+  }
