--- a/Frontend/src/app/player/player.component.html
+++ b/Frontend/src/app/player/player.component.html
@@ -7,3 +7,5 @@
       <p><strong>Credits:</strong> {{ player.credits }}</p>
     </div>
   </div>
+
+  <button class="logout-button" (click)="logOut()">Log out</button>
