--- a/Frontend/src/app/register-page/register-page.component.css
+++ b/Frontend/src/app/register-page/register-page.component.css
@@ -48,3 +48,11 @@
 .router-link-active {
   background-color: #0086ff;
 }
+
+.img-logo {
+  -webkit-tap-highlight-color: transparent;
+  width: 100%;
+  height: auto;
+  max-height: 100px;
+  max-width: 400px;
+}
