--- a/Frontend/src/app/register-page/register-page.component.html
+++ b/Frontend/src/app/register-page/register-page.component.html
@@ -3,7 +3,7 @@
       <div class="card">
         <div class="card-body">
           <form>
-            <div class="mb-3"></div>
+            <img class =" img-logo" src="assets/Images/Logo.png" alt="FESBet">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Username</label>
               <input type="email" class="form-control" name="email" [(ngModel)]="username">
